style.css
/* Always set the map height explicitly to define the size of the div
 * element that contains the map. */

/* Optional: Makes the sample page fill the window. */
html, body {
    height: 100%;
    width: 100%;
    margin: 0;
    padding: 0;
    background-color: azure;
    min-width: 320px;

}

#title {
    height: 15%;
    width: 100%;
    padding-left: 5%;
    padding-top: 0.2%;
    padding-bottom: 1%;

    background-color: azure;
    color: darkslategrey;

    text-align: left;
    font-style: italic;
    font-size: x-large;

    margin: auto;

}

#logo {
    width: 5%;
    vertical-align: middle;
}

#searchbar {
    overflow: hidden;
}
#LeftBar {
    float: left;
    display: block;
    min-height: 402.5%;
    width: 15%;
    position: absolute;
    padding: 2em;

    background-color: darkslategrey;
    color: azure;

    text-align: left;

    margin: auto;
    word-wrap: break-word;
}
#trombonne{
    width: 10%;
    vertical-align: middle;
}
#activity {
    margin-top: 30%;
}

.pics {
    width: 10%;
    vertical-align: middle;
    margin-right: 3%;
}

#news {
    width: 12%;
    vertical-align: middle;
    margin-right: 3%;
}

#RightBar {
    position:absolute;
    left: 80%;
    top: 0.001%;
    display:block;
    height: 420%;
    width: 20%;
    margin:auto;
    padding: 2em;

    background-color: darkslategrey;
    color: azure;

    text-align: left;
}
.ad {
    width: 80%;
    vertical-align: middle;
    margin-right: auto;
    margin-left: auto;
    margin-top: 20%;
}
#do {
    width: 82%;
    height: 20%;
    vertical-align: middle;
    margin-right: auto;
    margin-left: auto;
    margin-top: 20%;
}

.more {
    margin-top: 20%;
    margin-left: auto;
    margin-right: 18%;
    text-align: center;
    font-style: normal;
    text-decoration: underline;


}
#MidBar {
    width: 70%;
    background-color: azure;
    color: darkslategrey;
    margin: auto;
}

/*content of the central column MidBar*/
.box {
    height: 100px;
    width: 50%;
    font-size: 1em;
}

#post {
    text-align: center;
    margin-left: auto;
    margin-right: 5%;
}

#map {
    margin-left: auto;
    margin-right: auto;
    height: 250px;
    max-width: 100%;
    color: black;
}

article {
    padding: 5%;
    background-color: seagreen;
    opacity: 0.8;
    color: white;
    width: 50%;
    margin-left: auto;
    margin-right: auto;
    text-align: center;
    margin-top: 5%;
    overflow: auto;
}

fieldset {
    margin-bottom: 15px;
    padding: 10px;
}

legend {
    padding: 0px 3px;
    font-weight: bold;
}

label {
    width: 110px;
    display: inline-block;
    vertical-align: top;
    margin: 6px;
}

#form, textarea {
    width: 300px;
}

textarea {
    height: 100px;
}

.article_bottom {
    padding: 1%;
    background-color: white;
    width: 57.8%;
    height: 5%;
    margin-left: auto;
    margin-right: auto;
    border: 1px solid darkslategrey;
    overflow: hidden;
}

.comment {
    /*float: left;*/
    float:right;
    height: 80%;
    width: 88%;
    font-size: 1em;
    /*margin-right: 8%;*/
}
.share {
    width: 8%;
    display: inline-block;
    vertical-align: middle;
}

#video_bubble {
    border-radius: 50%;
    object-fit: cover;
}

#video1 {
    -webkit-transition: all 0.5s ease-in-out;
    -moz-transition: all 0.5s ease-in-out;
    -o-transition: all 0.5s ease-in-out;
    transition: all 0.5s ease-in-out;
}

video {
    max-width: 100%;
    height: auto;
}

canvas {
    max-width: 100%;
    height: auto;
    -webkit-transition: all 0.5s ease-in-out;
    -moz-transition: all 0.5s ease-in-out;
    -o-transition: all 0.5s ease-in-out;
    transition: all 0.5s ease-in-out;
}

@media only screen and (max-width: 1000px) {
    /* For mobile phones: */

    #LeftBar {
        width: 100%;
        position: static;
        min-height: 100%;
        float: none;

    }

    #RightBar {
        position:static;
        height: auto;
        width: 100%;
        float: none;
    }

    #MidBar {
        width: 100%;
        position: static;
        float: none;
        margin-bottom: 10%;
    }

    article {
        width: 80%;
    }

    .article_bottom {
        width: 80%;
    }
}

